--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </div>
       <nav class="menu">
         <a href="#servicios">Servicios</a>
+        <a href="/cursos">Cursos</a>
         <a href="#como-funciona">Cómo funciona</a>
         <a href="#agenda">Agenda</a>
       </nav>
@@ -35,7 +36,7 @@
         <div class="hero-actions">
           <a href="#agenda" class="btn btn-primary">Agendar reunión</a>
           <!-- Reemplaza el número por tu WhatsApp en formato internacional -->
-          <a href="https://wa.me/56912345678" target="_blank" class="btn btn-outline">
+          <a href="https://wa.me/920506678" target="_blank" class="btn btn-outline">
             Escribir por WhatsApp
           </a>
         </div>
@@ -147,7 +148,7 @@
 
         <p class="agenda-note">
           También puedes agendar directamente por WhatsApp:
-          <a href="https://wa.me/56912345678" target="_blank">+56 9 1234 5678</a>
+          <a href="https://wa.me/56920506678" target="_blank">+56 9 20506678</a>
         </p>
       </div>
 
@@ -201,7 +202,7 @@
 
         <p class="agenda-alt">
           O escríbeme directamente a:
-          <a href="mailto:contacto@lanedu.cl">contacto@lanedu.cl</a>
+          <a href="mailto:contactolanedu@gmail.com">contactolanedu@gmail.com</a>
         </p>
       </div>
     </div>
@@ -210,7 +211,7 @@
   <footer class="footer">
     <div class="container footer-content">
       <p>© <span id="year"></span> LanEdu.cl — Laboratorios y cursos de tecnología en Chile.</p>
-      <p>Valparaíso · Chile · <a href="mailto:contacto@lanedu.cl">contacto@lanedu.cl</a></p>
+      <p>Valparaíso · Chile · <a href="mailto:contactolanedu@gmail.com">contactolanedu@gmail.com</a></p>
     </div>
   </footer>
 
