--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         -->
         <form 
           class="agenda-form" 
-          action="https://formspree.io/f/tu-endpoint" 
+          action="https://formspree.io/f/xldqpvlr" 
           method="POST"
         >
           <label>
