--- a/cursos/index.html
+++ b/cursos/index.html
@@ -21,7 +21,7 @@
         <a href="#cursos">Cursos</a>
         <a href="#modos">Modalidades</a>
         <a href="#contacto">Contacto</a>
-        <a href="https://lanedu.cl" target="_blank" class="link-main">Volver a LanEdu</a>
+        <a href="www.lanedu.cl" target="_blank" class="link-main">Volver a LanEdu</a>
       </nav>
     </div>
   </header>
@@ -259,7 +259,7 @@
         </ul>
         <p class="contact-note">
           También puedes escribir directo por WhatsApp:
-          <a href="https://wa.me/56912345678" target="_blank">+56 9 1234 5678</a>
+          <a href="https://wa.me/56920506678" target="_blank">+56920506678</a>
         </p>
       </div>
 
@@ -267,7 +267,7 @@
         <h3>Formulario de interés</h3>
         <form 
           class="contact-form" 
-          action="https://formspree.io/f/tu-endpoint" 
+          action="https://formspree.io/f/xldqpvlr" 
           method="POST"
         >
           <label>
@@ -312,7 +312,7 @@
 
         <p class="contact-alt">
           O escríbeme a:
-          <a href="mailto:contacto@lanedu.cl">contacto@lanedu.cl</a>
+          <a href="mailto:contactolanedu@gmail.com">contactolanedu@gmail.com</a>
         </p>
       </div>
     </div>
@@ -321,7 +321,7 @@
   <footer class="footer">
     <div class="container footer-content">
       <p>© <span id="year"></span> LanEdu.cl — Cursos y laboratorios de tecnología.</p>
-      <p>Valparaíso · Chile · <a href="mailto:contacto@lanedu.cl">contacto@lanedu.cl</a></p>
+      <p>Valparaíso · Chile · <a href="mailto:contactolanedu@gmail.com">contactolanedu@gmail.com</a></p>
     </div>
   </footer>
 
