--- a/cursos/index.html
+++ b/cursos/index.html
@@ -21,7 +21,7 @@
         <a href="#cursos">Cursos</a>
         <a href="#modos">Modalidades</a>
         <a href="#contacto">Contacto</a>
-        <a href="www.lanedu.cl" target="_blank" class="link-main">Volver a LanEdu</a>
+        <a href="/" target="_blank" class="link-main">Volver a LanEdu</a>
       </nav>
     </div>
   </header>
